--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     /> -->
-    <!-- <link href="./reset.css" type="text/css" rel="stylesheet"> -->
+    <link href="./reset.css" type="text/css" rel="stylesheet">
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
