--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,8 @@
     /> -->
 
     <!-- custom stylesheets -->
-    <!-- <link href="./reset.css" type="text/css" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet"> -->
     <link href="./style.css" type="text/css" rel="stylesheet">
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
