--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,10 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <!-- <meta
+    <meta
       name="description"
-      content="Web site created using create-react-app"
-    /> -->
+      content="A minimalist social media placing its users first. Post thoughts, connect with friends, and keep it simple on Bicycle."
+    />
 
     <!-- custom stylesheets -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
