--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,8 @@
     />
 
     <!-- custom stylesheets -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet"> -->
     <link href="./style.css" type="text/css" rel="stylesheet">
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicons/android-chrome-192x192.png" />
