Improve about page.

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
 
     <!-- custom stylesheets -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/431dc976c4.js" crossorigin="anonymous"></script>
     <link href="./style.css" type="text/css" rel="stylesheet">
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicons/android-chrome-192x192.png" />
